<resources>
    <string name="app_name">Foodian</string>
    <string name="start_order">Start Order</string>
    <string name="food_description">Food description</string>
    <string name="price">$0.00</string>
    <string name="price2">$%s</string>
    <string name="entree_menu">Entree Menu</string>
    <string name="sub_total">Subtotal: $%.2f</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="app_menu">App Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="entree_meal">Entree Meal</string>
    <string name="side_meal">Side Meal</string>
    <string name="accompaniment_meal">Accompaniment Meal</string>
    <string name="cauliflower">cauliflower</string>
    <string name="chili">chili</string>
    <string name="pasta">pasta</string>
    <string name="skillet">skillet</string>
    <string name="submit_order">Submit Order</string>
    <string name="tax">Tax: $%.2f</string>
    <string name="salad">salad</string>
    <string name="soup">soup</string>
    <string name="potatoes">potatoes</string>
    <string name="rice">rice</string>
    <string name="bread">bread</string>
    <string name="berries">berries</string>
    <string name="pickles">pickles</string>
    <string name="total">Total $%.2f</string>
</resources>